сделали выпадающее меню

--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
 </head>
 <body>
   
+  <nav>
+    <ul class="topmenu">
+      <li>
+        <a href="#">menu 1 lvl</a>
+        <ul class="submenu">
+          <li><a href="#">menu 2 level</a></li>
+          <li>
+            <a href="#">menu 2 level</a>
+            <ul class="submenu">
+              <li><a href="#">menu 3 level</a></li>
+              <li><a href="#">menu 3 level</a></li>
+              <li><a href="#">menu 3 level</a></li>
+              <li><a href="#">menu 3 level</a></li>
+            </ul>
+          </li>
+          <li><a href="#">menu 2 level</a></li>
+          <li><a href="#">menu 2 level</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">menu 1 lvl</a>
+      </li>
+      <li>
+        <a href="#">menu 1 lvl</a>
+      </li>
+      <li>
+        <a href="#">menu 1 lvl</a>
+      </li>
+    </ul>
+  </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
